feat: option to save links to an existing group - renamed populateGroupFilter to populateGroupDropdowns since there's two dropdowns now - have user pick between saving a link to no group, a new group, or an   existing group

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,11 @@
 
     <input type="text" id="titleInput" placeholder="Link Title">
     <input type="text" id="notesInput" placeholder="Notes">
-    <input type="text" id="groupInput" placeholder="Group (optional)">
+    <select id="groupInput">
+      <option value="">(No Group)</option>
+      <option value="NEW_GROUP">Create New Group</option>
+    </select>
+    <input type="text" id="newGroupInput" placeholder="Enter new group name" style="display: none;"> <!-- only visible on new group creation -->
     <button id="saveButton">Save</button>
 
     <h3>My Saved Links:</h3>
