chore: simplify group and link search text areas

--- a/popup.html
+++ b/popup.html
@@ -10,16 +10,16 @@
     <input type="text" id="titleInput" placeholder="Link Title">
     <input type="text" id="notesInput" placeholder="Notes">
     <select id="groupInput">
-      <option value="">(No Group)</option>
+      <option value="">No Group</option>
       <option value="NEW_GROUP">Create New Group</option>
     </select>
     <input type="text" id="newGroupInput" placeholder="Enter new group name" style="display: none;"> <!-- only visible on new group creation -->
     <button id="saveButton">Save</button>
 
     <h3>My Saved Links:</h3>
-    <input type="text" id="searchInput" placeholder="Search saved links...">
+    <input type="text" id="searchInput" placeholder="Search links">
     <select id="groupFilter">
-        <option value="">All Groups</option>
+        <option value="">Groups</option>
         </select>
 
     <script src="popup.js"></script>
