feat: html/css for editing link button

--- a/popup.html
+++ b/popup.html
@@ -22,6 +22,7 @@
         <option value="">Groups</option>
         </select>
 
+    <ul id="savedLinksList"></ul>
     <script src="popup.js"></script>
   </body>
 </html>
