--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-    <h2>Save Current Page</h2>
+    <h2 id="formTitle">Save Current Page</h2>
 
     <input type="text" id="titleInput" placeholder="Link Title">
     <input type="text" id="notesInput" placeholder="Notes">
