feat: id link search textarea for dom manipulation

--- a/popup.html
+++ b/popup.html
@@ -16,8 +16,8 @@
     <input type="text" id="newGroupInput" placeholder="Enter new group name" style="display: none;"> <!-- only visible on new group creation -->
     <button id="saveButton">Save</button>
 
-    <h3>My Saved Links:</h3>
-    <input type="text" id="searchInput" placeholder="Search links">
+    <h3 id="mySavedLinksSection">My Saved Links:</h3>
+    <input type="text" id="searchInput" placeholder="Search links" />
     <select id="groupFilter">
         <option value="">Groups</option>
         </select>
