style: resize / reformat 'My Saved Links' text

--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,7 @@
   <!-- only visible on new group creation -->
   <button id="saveButton">Save</button>
 
-  <h3 id="mySavedLinksSection">My Saved Links:</h3>
+  <h2 id="mySavedLinksSection">My Saved Links</h2>
   <input type="text" id="searchInput" placeholder="Search links" />
   <select id="groupFilter">
     <option value="">Groups</option>
