feat: showMessage() html and css styling

--- a/popup.html
+++ b/popup.html
@@ -16,8 +16,9 @@
     <option value="NEW_GROUP">Create New Group</option>
   </select>
   <input type="text" id="newGroupInput" placeholder="Enter new group name" style="display: none;">
-  <!-- only visible on new group creation -->
   <button id="saveButton">Save</button>
+
+  <div id="messageDisplay" class="message-display" style="display: none;"></div>
 
   <h2 id="mySavedLinksSection">My Saved Links</h2>
   <input type="text" id="searchInput" placeholder="Search links" />
