feat/style: UI attribution and styling

--- a/popup.html
+++ b/popup.html
@@ -27,6 +27,9 @@
   </select>
 
   <ul id="savedLinksList"></ul>
+
+  <p id="attribution">V icon made by <a href="https://www.flaticon.com/authors/rohim" title="Rohim">Rohim</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
+
   <script src="popup.js"></script>
 </body>
 
