--- a/popup.html
+++ b/popup.html
@@ -28,6 +28,9 @@
 
   <ul id="savedLinksList"></ul>
 
+  <button id="importBookmarksButton">Import Bookmarks</button>
+  <p id="importMessage"></p>
+       
   <p id="attribution">V icon made by <a href="https://www.flaticon.com/authors/rohim" title="Rohim">Rohim</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
 
   <script src="popup.js"></script>
