--- a/popup.html
+++ b/popup.html
@@ -33,6 +33,8 @@
         
   <p id="attribution">V icon made by <a href="https://www.flaticon.com/authors/rohim" title="Rohim">Rohim</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
 
+  <script src="functions.js"></script>
+  <script src="handlers.js"></script>
   <script src="popup.js"></script>
 </body>
 
